# PlasmaPy-NEI

./: .codecov.yaml  .codemeta.json  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  publish.yml  pyproject.toml  requirements.txt  run-tox-env.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: fortnightly.yml  stale.yml  testing.yml
changelog/: 57.doc.rst
docs/: Makefile  bibliography.bib  common_links.rst  conf.py  glossary.rst  index.rst  requirements.txt
docs/eigen/: index.rst
docs/nei/: index.rst
licenses/: PlasmaPy_license.md
plasmapy_nei/: __init__.py
plasmapy_nei/data/: .gitattributes  ionrecomb_rate.h5
plasmapy_nei/eigen/: __init__.py  eigenclass.py  eigenvaluetable.py
plasmapy_nei/eigen/tests/: __init__.py  test_eigen.py  test_eigenclass.py  test_eigenvaluetable.py
plasmapy_nei/example_subpkg/: __init__.py
plasmapy_nei/nei/: __init__.py  nei.py
plasmapy_nei/nei/tests/: __init__.py  test_nei.py
plasmapy_nei/tests/: test_example.py  test_import_plasmapy.py
requirements/: build.txt  docs.txt  environment.yml  extras.txt  install.txt  tests.txt
